# BMPose

./: README.md  pyproject.toml
BMPose/apps/: live_demo.py
apps/: evaluate_sequence.py  run_video.py
scripts/: clone_references.ps1  download_models.py
src/bmpose/: __init__.py  constants.py  filters.py  mapping.py  mediapipe_pose.py  metrics.py  pipeline.py  types.py  visualization.py
src/bmpose/videopose/: __init__.py  model.py  runtime.py
tests/: test_mapping.py  test_metrics.py
